# familycut

./: .dockerignore  .env.example  .gitignore  README.md  README.zh-CN.md  docker-compose.example.yml
.github/: dependabot.yml
admin-web/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json
android-app/: keystore.properties.example  settings.gradle.kts
backend/: .dockerignore  Dockerfile  README.md  pyproject.toml
backend/app/: __init__.py  main.py
backend/app/api/: deps.py  router.py  routes_auth.py  routes_exercises.py  routes_measurements.py  routes_media.py  routes_members.py  routes_nutrition.py  routes_reports.py  routes_settings.py
backend/app/core/: config.py  security.py
backend/app/db/: init_runtime.py  runtime_migrations.py  session.py
backend/app/models/: __init__.py  domain.py
backend/app/schemas/: auth.py  measurement.py  media.py  member.py  nutrition.py  report.py  settings.py
backend/app/services/: ai.py  auth.py  reports.py  tdee.py
backend/app/workers/: jobs.py
backend/tests/: conftest.py  test_ai_parsing.py  test_auth_flows.py  test_health.py  test_media_and_reports.py  test_member_username_audit.py  test_nutrition_flow.py  test_workers.py
docs/: AI_HANDOFF.md  AI_HANDOFF.zh-CN.md  DEPLOYMENT.md  DEPLOYMENT.zh-CN.md  ROADMAP.md  ROADMAP.zh-CN.md  SCREENSHOTS.md  SCREENSHOTS.zh-CN.md  USAGE_EXAMPLES.md  USAGE_EXAMPLES.zh-CN.md  android-theme.md  architecture.md  pwa-plan.md
mobile-web/: index.html  package-lock.json  package.json  vite.config.ts
scripts/: audit_member_usernames.py  ci-test.sh  (+3 more)
(+61 files in other folders)
