[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "familycut-backend"
version = "0.1.0"
description = "FamilyCut FastAPI backend"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.116.0",
  "uvicorn[standard]>=0.35.0",
  "sqlalchemy>=2.0.38",
  "psycopg[binary]>=3.2.6",
  "pydantic>=2.11.1",
  "pydantic-settings>=2.8.1",
  "python-multipart>=0.0.20",
  "passlib>=1.7.4",
  "pyjwt>=2.10.1",
  "httpx>=0.28.1",
  "pillow>=11.1.0",
  "redis>=5.2.1",
  "arq>=0.26.3"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.5",
  "pytest-cov>=6.0.0",
]

[tool.setuptools.packages.find]
include = ["app*"]
